# JupyterTollsPyScientist

./: .gitignore  LICENSE  Notes.txt  README.md  pyproject.toml  requirements.txt  setup.py
src/JupyterTollsPyScientist/: README.md  jupyter_tools.py  petrophysical_layout.py  tracks_description_base.xlsx  utils.py
src/JupyterToolsPyScientist/: calculator.py  petrophysical_layout.py  utils.py
src/JupyterToolsPyScientist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/JupyterTollsPyScientist/: test_jupyter_tools.py
tests/JupyterToolsPyScientist/: test_jupyter_tools.py
tests/test_dataset/: 1054311050.las  assignment_test.xlsx  tracks_description_test.xlsx
